trying to implement dark mode button - issues with the color variables and stuff - its getting confusing as its set up vvarious scss files

--- a/styles/_styleGuide.scss
+++ b/styles/_styleGuide.scss
@@ -9,9 +9,10 @@ $padding-xLarge: 4rem;
 $padding-xxLarge: 6rem;
 
 // colors
-$clr-links: rgb(26, 26, 26);
-$clr-para: rgb(14, 14, 14);
-$clr-button: rgb(26, 26, 26);
+// $clr-links: rgb(26, 26, 26);
+// $clr-para: rgb(14, 14, 14);
+// $clr-button: rgb(26, 26, 26);
+// $clr-bg: rgb(212, 212, 212);
 
 // font-size
 $fontSize-para: 1.6rem;
@@ -84,7 +85,6 @@ html {
   //1rem =10px
   height: 100%;
   width: 100%;
-  // filter: invert(1) hue-rotate(180deg);
 }
 
 * {
